@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2021 Oracle and/or its affiliates.
+ * Copyright (c) 2017, 2024 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -42,7 +42,7 @@ public class MapperServicesEnabledTest extends AbstractMapperServicesTest {
      */
     @Test
     public void testLocale() {
-        assertThat(getLocale(), is(new Locale("m2:cs", "m2:CZ", "m2:Praha")));
+        assertThat(getLocale(), is(Locale.of("m2:cs", "m2:CZ", "m2:Praha")));
     }
 
 }
